# security--cheak

./: .gitignore  README.md  check-scans.js  docker-compose.yml  package-lock.json  start-project.ps1  start.bat  task.md
api/: package-lock.json  package.json
api-nest/: Dockerfile  package-lock.json  package.json  update-db.js
api-nest/src/: app.module.ts  main.ts  worker.main.ts  worker.module.ts
api-nest/src/ai/: red-team-simulation.service.ts
api-nest/src/attack-chain/: attack-chain.module.ts
api-nest/src/auth/: auth.guard.ts
api-nest/src/controllers/: analytics.controller.ts  auth.controller.ts  health.controller.ts  scan.controller.ts
api-nest/src/ctf/: crypto.service.ts  ctf.controller.ts  ctf.module.ts  forensics.service.ts  rag.service.ts  team.gateway.ts
api-nest/src/db/: database.module.ts
api-nest/src/gateways/: scan.gateway.ts
api-nest/src/reports/: executive-report.service.ts
api-nest/src/services/: ai.service.ts  alert.service.ts  (+5 more)
api/db/: schema.sql
api/src/: index.ts
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
nginx/: nginx.conf
scanner/: Cargo.toml  Dockerfile  cargo_errors.txt  cargo_errors_utf8.txt
scanner/src/: lib.rs  main.rs
scanner/src/models/: mod.rs  report.rs  scan.rs  vulnerability.rs
scanner/src/modules/: api_fuzzer.rs  asset_discovery.rs  cloud_scanner.rs  crawler.rs  csrf.rs  ctf_analyzer.rs  dir_bruteforce.rs  dom_xss.rs  file_upload.rs  graphql.rs  header_analyzer.rs  mod.rs  orchestrator.rs  port_scanner.rs  recon_engine.rs  sast_analyzer.rs  smart_scanner.rs  ssl_analyzer.rs  ssrf.rs  subdomain_enum.rs  threat_intel.rs  vuln_detector.rs  waf_detector.rs  xxe.rs
scanner/src/profiles/: laravel.rs  mod.rs  wordpress.rs
scanner/src/utils/: http.rs  logger.rs  mod.rs
(+170 files in other folders)
