[package]
name = "security-scanner"
version = "0.1.0"
edition = "2021"
description = "AI-Powered Security Assessment Scanner Engine"
authors = ["Your Name"]

[[bin]]
name = "scanner"
path = "src/main.rs"

[lib]
name = "scanner_lib"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "cookies", "multipart"] }

# TLS analysis
rustls = "0.21"
x509-parser = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# Regex for pattern matching
regex = "1.10"

# HTML Parsing for Crawler
scraper = "0.18"

# DNS Resolution for Subdomain Enum
# trust-dns-resolver was renamed to hickory-resolver in 0.24 (Issue #9)
hickory-resolver = "0.24"
# HTTP header analysis
http = "0.2"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Base64 (for SSL cert analysis)
base64 = "0.21"

# [REMOVED] headless_chrome = "1.0.8"
# Reason: Required a Chromium binary not present in the Docker runtime image.
# Any scan including dom-xss crashed the entire Rust process (Bug #2).
# DOM XSS detection now uses HTTP heuristics in dom_xss.rs (zero new dependencies).

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
